Supercluster/Cluster01/WebServer2/Namespace.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/11/2024        #
############################
---
apiVersion: v1
kind: Namespace
metadata:
  name: webserver2
  labels:
    name: webserver2
    app: webserver2
    owner: Zizis
    environment: production
  annotations:
    description: This namespace is used for the webserver2 application.
    contact: info@eliasdh.com
---
