Supercluster/Cluster01/WebServer2/Service.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/11/2024        #
############################
---
apiVersion: v1
kind: Service
metadata:
  name: webserver2-service
  namespace: webserver2
spec:
  selector:
    app: webserver2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
